OFFICER DASHBOARD + other fixes
COMELEC officer:
-turnouts page
-results page
-search
-political party in Candidate's List
SYSADMIN
-working checkboxes (try to play with it and see how kool it is)
-search
- fixed page bug if no page is selected
- put log out button next to acc name

--- a/sysadmin/static/sysadmin/css/components/admin-officer.css
+++ b/sysadmin/static/sysadmin/css/components/admin-officer.css
@@ -1,11 +1,9 @@
-table tr td.col-name {
-    width: 15%;
+.col-name{
+	flex-basis: 25%;
 }
-
-table tr td.col-id {
-    width: 10%;
+.col-id{
+	flex-basis: 20%;
 }
-
-table tr td.col-address {
-    width: 20%;
+.col-address{
+	flex-basis: 40%;
 }
