--- a/sysadmin/static/sysadmin/css/components/officer.css
+++ b/sysadmin/static/sysadmin/css/components/officer.css
@@ -6,7 +6,7 @@
    font-family: opensans; 
    src: url(../../assets/fonts/OpenSans-Regular.ttf)
  }
-
+ 
 *{
 	margin: 0px;
 	padding: 0px;
@@ -190,8 +190,7 @@ a:hover{
 }
 
 #tab-container{
-	width: 70%; height: 500px;
-	min-height: 400px;
+	width: 70%; height: 100%;
 	margin: 0px 15% 0px 15%;
 }
 .tab-content{
@@ -345,6 +344,6 @@ select{
 }
 #logo{
 	text-align: center;
-	margin-top: 200px;
+	margin-top: 100px;
 	margin-bottom: 30px;
 }
