--- a/sysadmin/templates/sysadmin/admin-officer.html
+++ b/sysadmin/templates/sysadmin/admin-officer.html
@@ -20,6 +20,7 @@
     <div id="user-container">
         <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
         <div id="user-name"> Troy Bolton</div>
+        <a id="log-out">Log out</a>
     </div>
 
 </div>
@@ -31,16 +32,16 @@
 
     <!-- SEARCH BAR AND DESELECT-DELETE TAKE UP THE SAME SPOT. THEY ARE ACTIVATED AND DEACTIVATED RESPECTIVELY-->
 
-    <!-- SEARCH BAR
+    <!-- SEARCH BAR-->
     <form action="" id="tab-search">
         <input  id="search" type="text" name="search-officer" placeholder="Search an officer...">
-    </form> -->
-
+    </form> 
+    
     <!-- DESELECT-DELETE -->
-    <div id="deselect-delete">
-        <button id="deselect">Deselect All</button>
-        <button id="delete">Delete Selected Candidate(s)</button>
-    </div>
+    <!--<div id="deselect-delete">
+        <button id="deselect">Deselect All</button>-->
+        <button id="delete">Delete Selected Officer(s)</button>
+    <!--</div>-->
 </div>
 
 <!-- CONTAINER WHERE TABS WILL OCCUPY -->
@@ -48,42 +49,44 @@
 
     <!-- FIRST TAB -->
     <div id="All" class="tab-content">
-        <table>
-            <!-- FIRST ROW IS HEADER/TITLE ROW. DO NOT CHANGE!! -->
-            <tr class="row-0">
-                <td class="col-checkbox"><input type="checkbox"></td>
-                <td class="col-name">Full Name</td>
-                <td class="col-id">ID Number</td>
-                <td class="col-address">Email Address</td>
-            </tr>
+        <div id="table-container">
+            <!-- FIRST ROW IS HEADER/TITLE ROW. -->
+            <div class="table-row row-0">
+                <div class="col-checkbox"><input type="checkbox"  id="toggle-all" onclick="toggle(this)"></div>
+                <div class="col-name">Full Name</div>
+                <div class="col-id">ID Number</div>
+                <div class="col-address">Email Address</div>
+            </div>
 
             <!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
-            <tr class="row-1">
-                <td class="col-checkbox"><input type="checkbox"></td>
-                <td class="col-name">Logan Paul</td>
-                <td class="col-id">17496849</td>
-                <td class="col-address">logan_paul@youtube.com</td>
-            </tr>
-            <tr class="row-2">
-                <td class="col-checkbox"><input type="checkbox"></td>
-                <td class="col-name">Jake Paul</td>
-                <td class="col-id">17496849</td>
-                <td class="col-address">jake_paul@youtube.com</td>
-            </tr>
+            <div class="table-row row-1">
+                <div class="col-checkbox"><input type="checkbox" name="check" onclick="selected(this)"></div>
+                <div class="col-name">Logan Paul</div>
+                <div class="col-id">17496849</div>
+                <div class="col-address">logan_paul@youtube.com</div>
+            </div>
 
-            <tr class="row-1">
-                <td class="col-checkbox"><input type="checkbox"></td>
-                <td class="col-name">Logan Paul</td>
-                <td class="col-id">17496849</td>
-                <td class="col-address">logan_paul@youtube.com</td>
-            </tr>
-            <tr class="row-2">
-                <td class="col-checkbox"><input type="checkbox"></td>
-                <td class="col-name">Jake Paul</td>
-                <td class="col-id">17496849</td>
-                <td class="col-address">jake_paul@youtube.com</td>
-            </tr>
-        </table>
+            <div class="table-row row-2">
+                <div class="col-checkbox"><input type="checkbox" name="check" onclick="selected(this)"></div>
+                <div class="col-name">Jake Paul</div>
+                <div class="col-id">17496849</div>
+                <div class="col-address">jake_paul@youtube.com</div>
+            </div>
+            
+            <div class="table-row row-1">
+                <div class="col-checkbox"><input type="checkbox" name="check" onclick="selected(this)"></div>
+                <div class="col-name">Logan Paul</div>
+                <div class="col-id">17496849</div>
+                <div class="col-address">logan_paul@youtube.com</div>
+            </div>
+
+            <div class="table-row row-2">
+                <div class="col-checkbox"><input type="checkbox" name="check" onclick="selected(this)"></div>
+                <div class="col-name">Jake Paul</div>
+                <div class="col-id">17496849</div>
+                <div class="col-address">jake_paul@youtube.com</div>
+            </div>
+        </div>
     </div>
 
     <!-- SECOND TAB (FORM TAB)-->
@@ -115,6 +118,58 @@
         </div>
     </form>
 
+    <!-- THIRD HIDDEN TAB (EDIT TAB)-->
+            <form action="" id="Edit" class="tab-content">
+                <div class="info-fields-container">
+                    <div class="info-container">
+                        <div class="info-label"> Full Name </div>
+                        <input type="text" class="info-input" name="cand-name" placeholder="ex. Logan Paul">
+                    </div>
+
+                    <div class="info-container">
+                        <div class="info-label"> ID Number</div>
+                        <input type="text" class="info-input" name="cand-id" placeholder="ex. 18002738255">
+                    </div>
+
+                    <div class="info-container">
+                        <div class="info-label"> College</div>
+                        <select class="info-input" name="cand-college">
+                            <option>CCS</option>
+                            <option>COB</option>
+                            <option>COE</option>
+                            <option>CLA</option>
+                            <option>COS</option>
+                        </select>
+                    </div>
+
+                    <div class="info-container">
+                        <div class="info-label"> Voting Status</div>
+                        <select class="info-input" name="cand-status">
+                            <option>YES</option>
+                            <option>NO</option>
+                            <option>MAYBE</option>
+                            <option>PERHAPS</option>
+                            <option>POSSIBLY</option>
+                        </select>
+                    </div>
+
+                    <div class="info-container">
+                        <div class="info-label"> Eligibility Status</div>
+                        <select class="info-input" name="cand-position">
+                            <option>Active</option>
+                            <option>Activen't</option>
+                        </select>
+                    </div>
+
+                </div>
+
+                <div class="info-buttons-container">
+                    <button class="button cancel">Cancel</button>
+                    <!-- SUBMIT BUTTON FOR THE TAB -->
+                    <input class="button confirm" type="submit" value="Save Changes">
+                </div>
+            </form>
+
 </div>
 
 <div id="logo">
@@ -123,8 +178,5 @@
 </body>
 
 <!-- JAVASCRIPT LINK-->
-<script src="{% static 'sysadmin/js/admin.js' %}">
-    //set default tab to "All" Tab by activating it on page load
-    document.getElementById("tab-all").click();
-</script>
+<script src="{% static 'sysadmin/js/admin.js' %}"></script>
 </html>
