--- a/sysadmin/templates/sysadmin/admin-unit.html
+++ b/sysadmin/templates/sysadmin/admin-unit.html
@@ -20,6 +20,7 @@
     <div id="user-container">
         <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
         <div id="user-name"> Troy Bolton</div>
+        <a id="log-out">Log out</a>
     </div>
 
 </div>
@@ -30,17 +31,17 @@
     <button class="tab-buttons" onclick="openTab(event, 'Add')" id="tab-add">Add a unit</button>
 
     <!-- SEARCH BAR AND DESELECT-DELETE TAKE UP THE SAME SPOT. THEY ARE ACTIVATED AND DEACTIVATED RESPECTIVELY-->
-
-    <!-- SEARCH BAR
+            
+    <!-- SEARCH BAR-->
     <form action="" id="tab-search">
         <input  id="search" type="text" name="search-unit" placeholder="Search a unit...">
-    </form> -->
+    </form> 
 
     <!-- DESELECT-DELETE -->
-    <div id="deselect-delete">
-        <button id="deselect">Deselect All</button>
-        <button id="delete">Delete Selected Candidate(s)</button>
-    </div>
+    <!--<div id="deselect-delete">
+        <button id="deselect">Deselect All</button>-->
+        <button id="delete">Delete Selected Unit(s)</button>
+    <!--</div>-->
 
 </div>
 
@@ -49,43 +50,61 @@
 
     <!-- FIRST TAB -->
     <div id="All" class="tab-content">
-        <table>
-            <!-- FIRST ROW IS HEADER/TITLE ROW. DO NOT CHANGE!! -->
-            <tr class="row-0">
-                <td class="col-checkbox"><input type="checkbox"></td>
-                <td class="col-name">College</td>
-                <td class="col-id">Batch</td>
-                <td class="col-unit">Unit Name</td>
-            </tr>
+        <div id="table-container">
+                    <!-- FIRST ROW IS HEADER/TITLE ROW. -->
+                    <div class="table-row row-0">
+                        <div class="col-checkbox"><input type="checkbox" id="toggle-all" onclick="toggle(this)"></div>
+                        <div class="col-college">College</div>
+                        <div class="col-batch">Batch</div>
+                        <div class="col-unit">Unit Name</div>
+                    </div>
 
-            <!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
-            <tr class="row-1">
-                <td class="col-checkbox"><input type="checkbox"></td>
-                <td class="col-name">COB</td>
-                <td class="col-id">115</td>
-                <td class="col-unit">BLAZEIT420</td>
-            </tr>
-            <tr class="row-2">
-                <td class="col-checkbox"><input type="checkbox"></td>
-                <td class="col-name">COS</td>
-                <td class="col-id">113</td>
-                <td class="col-unit">Unit Name</td>
-            </tr>
+                    <!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
+                    <div class="table-row row-1">
+                        <div class="col-checkbox"><input type="checkbox" name="check" onclick="selected(this)"></div>
+                        <div class="col-college">
+                            <div class="name" onclick="edit(this)"> 
+                                COB
+                            </div>
+                        </div>
+                        <div class="col-batch">17496849</div>
+                        <div class="col-unit">BLAZEIT420</div>
+                    </div>
 
-            <tr class="row-1">
-                <td class="col-checkbox"><input type="checkbox"></td>
-                <td class="col-name">COB</td>
-                <td class="col-id">115</td>
-                <td class="col-unit">BLAZEIT420</td>
-            </tr>
-            <tr class="row-2">
-                <td class="col-checkbox"><input type="checkbox"></td>
-                <td class="col-name">COS</td>
-                <td class="col-id">113</td>
-                <td class="col-unit">Unit Name</td>
-            </tr>
+                    <div class="table-row row-2">
+                        <div class="col-checkbox"><input type="checkbox" name="check" onclick="selected(this)"></div>
+                        <div class="col-college">
+                            <div class="name" onclick="edit(this)"> 
+                                Jake Paul
+                            </div>
+                        </div>
+                        <div class="col-batch">17496849</div>
+                        <div class="col-unit">DABONEMHATERS</div>
+                    </div>
 
-        </table>
+                    <div class="table-row row-1">
+                        <div class="col-checkbox"><input type="checkbox" name="check" onclick="selected(this)"></div>
+                        <div class="col-college">
+                            <div class="name" onclick="edit(this)"> 
+                                COB
+                            </div>
+                        </div>
+                        <div class="col-batch">17496849</div>
+                        <div class="col-unit">BLAZEIT420</div>
+                    </div>
+
+                    <div class="table-row row-2">
+                        <div class="col-checkbox"><input type="checkbox" name="check" onclick="selected(this)"></div>
+                        <div class="col-college">
+                            <div class="name" onclick="edit(this)"> 
+                                Jake Paul
+                            </div>
+                        </div>
+                        <div class="col-batch">17496849</div>
+                        <div class="col-unit">DABONEMHATERS</div>
+                    </div>
+
+                </div>
     </div>
 
     <!-- SECOND TAB (FORM TAB)-->
@@ -121,6 +140,40 @@
         </div>
     </form>
 
+    <!-- THIRD HIDDEN TAB (EDIT TAB)-->
+            <form action="" id="Edit" class="tab-content">
+                <div class="info-fields-container">
+                    <div class="info-container">
+                        <div class="info-label"> College </div>
+                        <select class="info-input" name="cand-college">
+                            <option>CCS</option>
+                            <option>COB</option>
+                            <option>COE</option>
+                            <option>CLA</option>
+                            <option>COS</option>
+                        </select>
+                    </div>
+
+                    <div class="info-container">
+                        <div class="info-label"> Batch</div>
+                        <input type="text" class="info-input" name="cand-id" placeholder="ex. 116">
+                    </div>
+
+                    <div class="info-container">
+                        <div class="info-label"> Unit Name</div>
+                        <input type="text" class="info-input" name="cand-id" placeholder="ex. ABSOLUTEUNIT">
+                    </div>
+
+                </div>
+
+                <div class="info-buttons-container">
+                    <button class="button cancel">Cancel</button>
+                    <!-- SUBMIT BUTTON FOR THE TAB -->
+                    <input class="button confirm" type="submit" value="Save Changes">
+                </div>
+            </form>
+
+
 </div>
 
 <div id="logo">
@@ -129,10 +182,7 @@
 </body>
 
 <!-- JAVASCRIPT LINK-->
-<script src="{% static 'sysadmin/js/admin.js' %}">
-    //set default tab to "All" Tab by activating it on page load
-    document.getElementById("tab-all").click();
-</script>
+<script src="{% static 'sysadmin/js/admin.js' %}"></script>
 </html>
 
 
