lscs logo, modal

--- a/original-statics/css/components/landing-logos.css
+++ b/original-statics/css/components/landing-logos.css
@@ -12,3 +12,11 @@
     height: 50px;
     margin: 10px;
 }
+
+#lscs-logo {
+    position: absolute;
+    right: 50px;
+    top: 0;
+    height: 50px;
+    margin: 10px;
+}
