--- a/vote/templates/vote/voting.html
+++ b/vote/templates/vote/voting.html
@@ -19,10 +19,12 @@
     <link href="{% static 'vote/css/components/candidates-row.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'vote/css/components/candidates-form.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'vote/css/components/vote-summary.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'css/components/read_more-modal.css' %}" rel="stylesheet" type="text/css"/>
 
     <!-- scripts -->
     <script src="{% static 'vote/js/abstain.js' %}" type="text/javascript"></script>
     <script src="{% static 'vote/js/vote_modal.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/read_more-modal.js' %}" type="text/javascript"></script>
 
 </head>
 <body>
@@ -66,7 +68,7 @@
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(1)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="batch-president" value="1" id="batch-president-1">
                     <label for="batch-president-1"></label>
@@ -86,7 +88,7 @@
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(2)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="batch-president" value="3" id="batch-president-3">
                     <label for="batch-president-3"></label>
@@ -102,7 +104,7 @@
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(3)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="batch-vice-president" value="1" id="batch-vice-president-1">
                     <label for="batch-vice-president-1"></label>
@@ -122,7 +124,7 @@
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(4)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="batch-vice-president" value="3" id="batch-vice-president-3">
                     <label for="batch-vice-president-3"></label>
@@ -138,7 +140,7 @@
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(5)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="legislative-assembly-representative" value="1"
                            id="legislative-assembly-representative-1">
@@ -160,7 +162,7 @@
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(6)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="legislative-assembly-representative" value="3"
                            id="legislative-assembly-representative-3">
@@ -180,7 +182,7 @@
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(7)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="college-president" value="1" id="college-president-1">
                     <label for="college-president-1"></label>
@@ -200,7 +202,7 @@
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(8)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="college-president" value="3" id="college-president-3">
                     <label for="college-president-3"></label>
@@ -219,7 +221,7 @@
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(9)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="president" value="1" id="president-1">
                     <label for="president-1"></label>
@@ -239,7 +241,7 @@
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(10)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="president" value="3" id="president-3">
                     <label for="president-3"></label>
@@ -255,7 +257,7 @@
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(11)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="vice-president-internal" value="1"
                            id="vice-president-internal-1">
@@ -277,7 +279,7 @@
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(12)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="vice-president-internal" value="3"
                            id="vice-president-internal-3">
@@ -294,7 +296,7 @@
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(13)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="vice-president-external" value="1"
                            id="vice-president-external-1">
@@ -316,7 +318,7 @@
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(14)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="vice-president-external" value="3"
                            id="vice-president-external-3">
@@ -333,7 +335,7 @@
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(15)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="secretary" value="1"
                            id="secretary-1">
@@ -355,7 +357,7 @@
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(16)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="secretary" value="3"
                            id="secretary-3">
@@ -372,7 +374,7 @@
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(17)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="treasurer" value="1"
                            id="treasurer-1">
@@ -394,7 +396,7 @@
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
-                        <a href="#" class="response-link">Read the response >></a>
+                        <a id="response-1" onclick="hintBrowser(18)" class="response-link button-read">Read the response >></a>
                     </div>
                     <input type="radio" name="treasurer" value="3"
                            id="treasurer-3">
@@ -402,6 +404,25 @@
                 </div>
             </div>
             <button id="voting-submit" type="button" onclick="showVote()">Submit my vote</button>
+
+            <div id="overlay" onclick="removeHint()">
+            </div>
+            <div id="modal-read">
+                <div id="modal__content-read">
+                    <div>
+                        <blockquote class = "blue">
+                                    Infuse your life with action. Don't wait for it to happen. Make it happen. Make your own future. Make your own hope. Make
+                                    your own love. And whatever your beliefs, honor your creator, not by passively waiting for grace to come down from upon high,
+                                    but by doing what you can to make grace happen... yourself, right now, right down here on Earth. 
+                            <footer>
+                                <cite>
+                                    Bradley Whitford
+                                </cite>
+                            </footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
 
             <div id="vote-modal">
                 <div id="vote-summary">
