--- a/sysadmin/static/sysadmin/css/components/admin.css
+++ b/sysadmin/static/sysadmin/css/components/admin.css
@@ -312,6 +312,12 @@ select {
     margin-right: 50px;
 }
 
+.issue-container {
+    width: 100%;
+    height: 25%;
+    display: flex;
+}
+
 .takes-container {
     width: 100%;
     height: 40%;
