--- a/passcode/templates/passcode/password_generator.html
+++ b/passcode/templates/passcode/password_generator.html
@@ -12,12 +12,42 @@
     <link href="{% static 'passcode/css/elements/root.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'passcode/css/elements/link.css' %}" rel="stylesheet" type="text/css"/>
 
+    <!-- ACCESSED THE CSS IN SYSADMIN -->
+    <link rel="stylesheet" type="text/css" href="{% static 'sysadmin/css/components/officer.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'sysadmin/css/components/officer-candidate.css' %}" />
+    <!-- <link rel="stylesheet" type="text/css" href="../../static/sysadmin/css/components/officer.css" />
+    <link rel="stylesheet" type="text/css" href="../../static/sysadmin/css/components/officer-candidate.css" /> -->
+
     <link rel="stylesheet" href="{% static 'passcode/css/components/password_generator.css' %}">
     <link rel="stylesheet" href="{% static 'passcode/css/components/password_generator-logos.css' %}">
 </head>
 <body>
 
-<img id="uxtoc_img" src="{% static 'passcode/assets/png/uxsoc-logo.png' %}">
+<div id="header-container">
+    <img id="header-ballot" src="{% static 'sysadmin/assets/svg/ballot-white.svg' %}">
+    <a href="{% url 'sysadmin:voters' %}">Voter's List</a>
+    <a href="{% url 'sysadmin:candidates' %}">Candidate's List</a>
+    <a href="{% url 'sysadmin:officers' %}">Comelec Officers</a>
+    <a href="{% url 'sysadmin:unit' %}">Unit</a>
+    <a href="{% url 'passcode:passcode' %}" id="selected">Password Generator</a>
+    <div id="user-container">
+        <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
+        <div id="user-name"> Troy Bolton</div>
+        <a id="log-out">Log out</a>
+    </div>
+    <!--
+			<div id="user-container">
+				<button class="dropbtn">
+					
+				</button>
+				<div id="user-container-content">
+					<div> Profile</div>
+					<div> Log out </div>
+
+				</div>
+			</div> -->
+
+</div>
 
 <div id="pass-container" class="center container">
     <form method="POST" action="">
