--- a/sysadmin/templates/sysadmin/officer-voter.html
+++ b/sysadmin/templates/sysadmin/officer-voter.html
@@ -14,6 +14,7 @@
 			<a href="officer-voter.html" id="selected">Voter's List</a>
 			<a href="officer-candidate.html">Candidate's List</a>
 			<a href="officer-results.html">Voting Results</a>
+			<a href="password_generator.html">Password Generator</a>
 			<div id="user-container">
 				<img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
 				<div id="user-name"> Troy Bolton</div>
